--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>p5.js Template (global version)</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="libraries/p5.min.js"></script>
-    <!-- <script src="libraries/p5.sound.min.js"></script> -->
+    <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
+    <script src="libraries/scenemanager.js"></script>
+    
     <script src="sketch.js"></script>
   </body>
 
