--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   <body>
     <script src="libraries/scenemanager.js"></script>
-    
+    <script src="paskocountdown.js"></script>
+    <script src="caroling.js"></script>
+    <script src="karaoke.js"></script>
     <script src="sketch.js"></script>
   </body>
 
